<resources>
    <string name="app_name">Alc phase 1</string>
    <string name="name">Atanda Adams Damilare</string>
    <string name="track">Track : Android</string>
    <string name="country">Country : Nigeria</string>
    <string name="email">Email : atandaadams@gmail.com</string>
    <string name="phone">Phone Number : +2347067509331</string>
    <string name="slack">Slack Username : @Adamix</string>
    <string name="welcome">Welcome to Alc 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">MY PROFILE</string>
</resources>
