<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MyProfile">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:src="@drawable/adams"
            android:id="@+id/imageView" android:layout_marginTop="116dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.498" android:visibility="visible"
            tools:visibility="visible" android:background="@android:color/holo_blue_dark"/>
    <TextView
            android:text="@string/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" android:layout_marginTop="16dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" android:textColor="@android:color/black"/>
    <TextView
            android:text="@string/track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2" android:layout_marginTop="24dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="@string/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4" app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            android:layout_marginTop="24dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="@string/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView6" app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            android:layout_marginTop="24dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7" app:layout_constraintStart_toStartOf="@+id/textView6"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            android:layout_marginTop="24dp" android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    <TextView
            android:text="Slack Username : @Adamix"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView8" app:layout_constraintStart_toStartOf="@+id/textView7"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginTop="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>