<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:background="#e0e0e0"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="104dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:textColor="@android:color/black"/>
    <Button
            android:text="@string/about_alc"
            android:layout_width="100sp"
            android:layout_height="70sp"
            android:id="@+id/aboutalc"
            android:background="@drawable/button_background"
            android:textColor="@android:color/black"
            android:layout_marginTop="68dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintHorizontal_bias="0.494"/>
    <Button
            android:text="@string/my_profile"
            android:layout_width="100sp"
            android:layout_height="70sp"
            android:id="@+id/myprofile" android:layout_marginTop="44dp"
            app:layout_constraintTop_toBottomOf="@+id/aboutalc" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.495"
            android:textColor="@android:color/black" android:background="@drawable/button_background"/>
</androidx.constraintlayout.widget.ConstraintLayout>